json parsing is working not implemented to show in screen tho:p